@@ -16,7 +16,6 @@
 
     <!-- jquery must be loaded here -->
     <script src="contrib/jquery-1.8.3.js"></script>
-    <script type="text/javascript" src="contrib/jquery.imagesloaded-2.1.1.js"></script> <!-- TODO: requirejs -->
 
     <!-- sim -->
     <script data-main='js/config.js' src='contrib/require-2.1.2.js'></script>
