@@ -28,7 +28,8 @@ require.config(
       easel: "../contrib/easeljs-0.6.0.min",
       i18n: "../contrib/i18n/i18n",
       tpl: "../contrib/tpl-0.2",
-      fastclick: "../contrib/fastclick-0.5.6"
+      fastclick: "../contrib/fastclick-0.5.6",
+      imagesloaded: "../contrib/jquery.imagesloaded-2.1.1"
     },
 
     // Configure the dependencies and exports for older, traditional "browser globals" scripts
